// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jMiJvg {
    color: var(--colors-tonal800);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 600;
    margin: 0;
  }

  .c-dtikvq {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal800);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-dtikvq:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-dtikvq[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }

  .c-fFGCSj {
    color: var(--colors-danger);
    margin-left: var(--space-1);
  }

  .c-dBUxNn {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 2;
    vertical-align: middle;
  }

  .c-jwkyIg {
    color: var(--colors-tonal800);
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }
}

@media  {
  .c-jMiJvg-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-jMiJvg-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-jMiJvg-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dtikvq-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-dtikvq-bXVTjQ-state-error {
    border: 1px solid var(--colors-danger);
  }

  .c-dBUxNn-kupcZn-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-jwkyIg-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-jwkyIg-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-jwkyIg-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dhzjXW-idXOPtz-css {
    color: var(--colors-danger);
    align-items: flex-start;
    margin-top: var(--space-2);
  }

  .c-dBUxNn-ihYlUBO-css {
    margin-right: var(--space-2);
    flex-shrink: 0;
  }

  .c-jwkyIg-ikkBjHS-css {
    color: inherit;
    transform: translateY(var(--space-1));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-jMiJvg c-jMiJvg-gvmVBy-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
          <span
            class="c-fFGCSj"
          >
            *
          </span>
        </label>
      </div>
      <input
        class="c-dtikvq c-dtikvq-pHZal-size-md c-dtikvq-bXVTjQ-state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <div
        class="c-dhzjXW c-dhzjXW-idXOPtz-css"
      >
        <svg
          aria-hidden="true"
          class="c-dBUxNn c-dBUxNn-kupcZn-size-sm c-dBUxNn-ihYlUBO-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <p
          class="c-jwkyIg c-jwkyIg-bndJoy-size-sm c-jwkyIg-ikkBjHS-css"
        >
          This field is required
        </p>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jMiJvg {
    color: var(--colors-tonal800);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 600;
    margin: 0;
  }

  .c-dtikvq {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal800);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-dtikvq:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-dtikvq[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }
}

@media  {
  .c-jMiJvg-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-jMiJvg-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-jMiJvg-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dtikvq-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-jMiJvg c-jMiJvg-gvmVBy-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-dtikvq c-dtikvq-pHZal-size-md"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-jMiJvg {
    color: var(--colors-tonal800);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 600;
    margin: 0;
  }

  .c-dtikvq {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal800);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-dtikvq:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-dtikvq[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }
}

@media  {
  .c-jMiJvg-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-jMiJvg-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-jMiJvg-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dtikvq-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-jMiJvg c-jMiJvg-gvmVBy-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-dtikvq c-dtikvq-pHZal-size-md"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
